# notes-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
