[package]
name = "notes-cli"
description = "A simple note taking CLI"
version = "0.1.1"
license = "MIT"
authors = ["Weston Carlson <wez470@gmail.com>"]
repository = "https://github.com/wez470/notes-cli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
clap = "2.33"
confy = "0.3"
serde = { version = "1.*", features = ["derive"] }
chrono = "0.4"
